# HPC-ResourceAccoutingSystem

./: .env.example  .gitignore  ARCHITECTURE.md  DEPLOY.md  GEMINI.md  README.md  alembic.ini  auth.py  clearJobs.sh  cli.py  cluster_config.py  config.ini  data_loader.py  database.py  database_utils.py  list_users.py  pyproject.toml  queries.py  requirements.txt  sql_compat.py  streamlit_data.py  streamlit_date_defaults.py  系統登入.py
alembic/: env.py
alembic/versions/: 0f61e2931c34_create_initial_tables.py  2b924cdc9f45_remove_run_time_str_from_jobs.py  68da61661014_add_wallet_concept_and_mappings.py  6a3e94a3daa1_add_source_file_to_jobs_table.py  aeee40038c58_add_group_to_group_mappings_table.py  b5c21d244111_merge_performance_indexes_and_remove_.py  c5892216_add_performance_indexes.py
data/: 250621.out  250622.out
pages/: 1_📊_儀表板資訊.py  2_📈_詳細統計資訊.py  3_⚙️_管理者控制台.py  4_📋_使用報表.py
scripts/: check_redis.py  deploy_setup.sh  profile_database.py  run_data_loader.sh
setup_scripts/: setup_macos.sh
tests/: test_auth.py  test_cluster_config.py  test_data_loader.py  test_database.py  test_database_utils.py  test_queries.py  test_sql_compat.py  test_streamlit_date_defaults.py
